--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,8 @@ body {
   text-align: center;
   margin: 0;
   font-family: 'Merriweather', serif;
+  color: #40514E;
+  line-height: 2;
 }
 
 h1 {
@@ -33,6 +35,7 @@ h2 {
   font-size: 1.5rem;
   color: #66BFBF;
   font-weight: normal;
+  padding: 10px;
 }
 
 
@@ -59,7 +62,7 @@ h3 {
 
 .cloud-1 {
   position: absolute;
-  right: 370px;
+  right: 250px;
   top: 50px;
 }
 
@@ -69,6 +72,11 @@ h3 {
   text-decoration: none;
   margin: 20px;
 }
+
+a:hover {
+  text-decoration: underline;
+}
+
 .computer {
   width: 25%;
   float: left;
@@ -88,7 +96,7 @@ h3 {
 
 .message-me {
   line-height: 2;
-  font-size: small;
+  font-size: 1rem;
 }
 
 .copyright {
@@ -99,10 +107,13 @@ h3 {
 
 .contact-me {
   line-height: 3;
+  width: 40%;
+  margin: 40px auto 40px;
 }
 
 .student-details {
-  font-size: medium;
+  width: 30%;
+  margin: auto;
 }
 
 .btn {
